--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    
     <h1>Site do cachorro</h1>  
 
     <p>Mussum Ipsum, cacilds vidis litro abertis. Leite de capivaris, leite de mula manquis sem cabeça. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis. Posuere libero varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit amet nisi. Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis.</p>
@@ -15,7 +17,15 @@
     <img src="http://placekitten.com/200/200" alt="Foto de gatinho">
 
     <a href="https://www.google.com.br" target="_blank">Facebook</a>
-    <input type="text" placeholder="Digite seu email">
+
+    <input id="inputEmailPrimeiro" class="inputEmail" type="text" placeholder="Digite seu email">
+
+    <input class="inputSenha" type="password" placeholder="Senha">
+
+    <input class="inputEmail" type="text" placeholder="Digite seu email">
+
+    <input class="inputSenha" type="password" placeholder="Senha">
+
 
     <a href="https://www.netflix.com/browse" target="_blank">
         <button>Google</button>
